--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <br><br>
     <div class="client">
         <br><br>
-        <label style="font-size:25px; padding-left: 70px;">Search user Cart</label><br>
+        <label style="font-size:25px; padding-left: 70px;">Search</label><br>
         <span style="padding-left: 70px;"><input type="search" ng-model="count"></span>
         <br>
         <p style="color:gray; font: 15px; padding-left: 70px;"></p>
